scripts/istio/tests/authentication-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "ingress-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/get", "/bytes/*", "/anything/x"]
#        hosts: ["example.com"]
