scripts/istio/tests/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: http-server
  namespace: http-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: http-server
#      istio.io/gateway-name: http-server
  action: DENY
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
  - to:
    - operation:
        ports: ["8000"]
#  - to:
#    - operation:
#        paths: ["/get", "/bytes/*", "/anything/x"]
#        hosts: ["example.com"]
