scripts/istio/tests/peer-authentication.yaml
#apiVersion: security.istio.io/v1beta1
#kind: PeerAuthentication
#metadata:
#  name: default
#  namespace: istio-system
#spec:
#  mtls:
#    mode: STRICT
#---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: server
  namespace: traffic-server
spec:
  selector:
    matchLabels:
      app: server
  mtls:
    mode: PERMISSIVE
